<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>eu.unicore.security</groupId>
  <artifactId>secutils-cxf</artifactId>
  <packaging>jar</packaging>
  <version>3.1.0-SNAPSHOT</version>
  <name>secutils-cxf</name>
  <description>CXF integration library for UNICORE</description>
  <url>https://github.com/UNICORE-EU/secutils-cxf</url>

  <parent>
    <groupId>eu.unicore</groupId>
    <artifactId>unicore-parent</artifactId>
    <version>1.22</version>
  </parent>

  <properties>
    <cxf.version>3.3.8</cxf.version>
    <saaj.version>1.5.1</saaj.version>
    <jaxws.version>2.3.2</jaxws.version>
    <wss.version>2.2.2</wss.version>
    <jetty.version>9.4.31.v20200723</jetty.version>
    <httpclient.version>4.5.3</httpclient.version>
    <seclib.version>5.1.0</seclib.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.target>1.8</maven.compiler.target>
    <maven.compiler.source>1.8</maven.compiler.source>
  </properties>

  <scm>
    <connection>scm:git:git://github.com/UNICORE-EU/secutils-cxf.git</connection>
    <developerConnection>scm:git:ssh://git@github.com/UNICORE-EU/secutils-cxf.git</developerConnection>
    <url>https://github.com/UNICORE-EU/secutils-cxf</url>
    <tag>HEAD</tag>
  </scm>
  
  <licenses>
    <license>
      <name>BSD</name>
      <url>https://opensource.org/licenses/BSD-3-Clause</url>
    </license>
  </licenses>
	
  <developers>
    <developer>
      <name>Krzysztof Benedyczak</name>
      <organization>Bixbit</organization>
      <organizationUrl>https://unity-idm.eu</organizationUrl>
    </developer>
    <developer>
      <name>Bernd Schuller</name>
      <email>bschuller at users.sourceforge.net</email>
      <organization>Research Center Juelich</organization>
      <organizationUrl>http://www.fz-juelich.de/jsc</organizationUrl>
    </developer>
  </developers>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.sun.xml.ws</groupId>
      <artifactId>jaxws-ri</artifactId>
      <version>${jaxws.version}</version>
      <type>pom</type>
      <exclusions>
	<exclusion>
	  <groupId>com.sun.xml.ws</groupId>
	  <artifactId>samples</artifactId>
	</exclusion>
	<exclusion>
	  <groupId>com.sun.xml.ws</groupId>
	  <artifactId>release-documentation</artifactId>
	</exclusion>
	<exclusion>
	  <groupId>com.sun.xml.ws</groupId>
	  <artifactId>jaxws-tools</artifactId>
	</exclusion>
	<exclusion>
	  <groupId>com.sun.xml.ws</groupId>
	  <artifactId>jaxws-eclipselink-plugin</artifactId>
	</exclusion>
	<exclusion>
	  <groupId>com.sun.xml.ws</groupId>
	  <artifactId>sdo-eclipselink-plugin</artifactId>
	</exclusion>
	<exclusion>
	  <groupId>com.sun.xml.bind</groupId>
	  <artifactId>jaxb-xjc</artifactId>
	</exclusion>
	<exclusion>
	  <groupId>com.sun.xml.bind</groupId>
	  <artifactId>jaxb-jxc</artifactId>
	</exclusion>
	<exclusion>
	  <groupId>org.glassfish.jaxb</groupId>
	  <artifactId>jaxb-xjc</artifactId>
	</exclusion>
	<exclusion>
	  <groupId>org.glassfish.gmbal</groupId>
	  <artifactId>gmbal</artifactId>
	</exclusion>
	<exclusion>
	  <groupId>org.jboss.spec.javax.rmi</groupId>
	  <artifactId>jboss-rmi-api_1.0_spec</artifactId>
	</exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.sun.activation</groupId>
      <artifactId>javax.activation</artifactId>
      <version>1.2.0</version>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-servlet</artifactId>
      <version>${jetty.version}</version>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-servlets</artifactId>
      <version>${jetty.version}</version>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-rewrite</artifactId>
      <version>${jetty.version}</version>
    </dependency>
    <dependency>
      <groupId>eu.unicore.security</groupId>
      <artifactId>securityLibrary</artifactId>
      <version>${seclib.version}</version>
      <exclusions>
        <exclusion>
          <artifactId>xalan</artifactId>
          <groupId>xalan</groupId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpclient</artifactId>
      <version>${httpclient.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.wss4j</groupId>
      <artifactId>wss4j-ws-security-dom</artifactId>
      <version>${wss.version}</version>
      <exclusions>
        <exclusion>
          <artifactId>opensaml-saml-impl</artifactId>
          <groupId>org.opensaml</groupId>
        </exclusion>
	    <exclusion>
          <artifactId>opensaml-xacml-impl</artifactId>
          <groupId>org.opensaml</groupId>
        </exclusion>
	    <exclusion>
          <artifactId>opensaml-xacml-saml-impl</artifactId>
          <groupId>org.opensaml</groupId>
        </exclusion>
        <exclusion>
	      <groupId>org.apache.santuario</groupId>
	      <artifactId>xmlsec</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <!-- use our patched version of xmlbeans that uses Saxon-HE 
         and works with Java 8-->
    <dependency>
      <groupId>org.apache.xmlbeans</groupId>
      <artifactId>xmlbeans-jdk8</artifactId>
      <version>2.6.0</version>
    </dependency>	
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>20090211</version>
    </dependency>
    
    <!-- cxf stuff -->
    <dependency>
      <groupId>com.sun.xml.messaging.saaj</groupId>
      <artifactId>saaj-impl</artifactId>
      <version>${saaj.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.cxf</groupId>
      <artifactId>cxf-rt-frontend-jaxws</artifactId>
      <version>${cxf.version}</version>
      <exclusions>
	<exclusion>
	  <groupId>org.glassfish.jaxb</groupId>
	  <artifactId>jaxb-xjc</artifactId>
	</exclusion>
	<exclusion>
	  <groupId>org.jboss.spec.javax.rmi</groupId>
	  <artifactId>jboss-rmi-api_1.0_spec</artifactId>
	</exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.apache.cxf</groupId>
      <artifactId>cxf-rt-transports-http</artifactId>
      <version>${cxf.version}</version>
      <exclusions>
	<exclusion>
	  <groupId>org.jboss.spec.javax.rmi</groupId>
	  <artifactId>jboss-rmi-api_1.0_spec</artifactId>
	</exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.apache.cxf</groupId>
      <artifactId>cxf-rt-features-clustering</artifactId>
      <version>${cxf.version}</version>
      <exclusions>
	<exclusion>
	  <groupId>org.jboss.spec.javax.rmi</groupId>
	  <artifactId>jboss-rmi-api_1.0_spec</artifactId>
	</exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.apache.cxf</groupId>
      <artifactId>cxf-rt-features-logging</artifactId>
      <version>${cxf.version}</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>2.5.3</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.2</version>
        <configuration>
          <forkMode>pertest</forkMode>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.1.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <additionalJOption>-Xdoclint:none</additionalJOption>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>1.6</version>
        <executions>
          <execution>
            <id>sign-artifacts</id>
            <phase>verify</phase>
            <goals>
              <goal>sign</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.sonatype.plugins</groupId>
        <artifactId>nexus-staging-maven-plugin</artifactId>
        <version>1.6.7</version>
        <extensions>true</extensions>
        <configuration>
          <serverId>sonatype-nexus-staging</serverId>
          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
          <autoReleaseAfterClose>true</autoReleaseAfterClose>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
